--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,6 @@
 name: Genwand
-main: ttdev.genwand.Genwand
+main: ttdev.genwand.GenWand
+depends: [Vault]
 authors: [Thomas, Tre]
 version: 1.0
 commands:
