--- a/src/config.yml
+++ b/src/config.yml
@@ -19,7 +19,7 @@ message:
   # When a player is a given an edit wand.
   wand-received: '&aEdit wand received.'
 
-  # When the player attemps to make an edit without having enough money.
+  # When the player attempts to make an edit without having enough money.
   not-enough-money: '&cNot enough money'
 
   # When the player attempts to use /gen without a complete cuboid selection.
