--- a/src/config.yml
+++ b/src/config.yml
@@ -3,7 +3,7 @@
 edit-tool: 280
 
 # The maximum number of blocks that can be edited at once.
-max-blocks: 100
+max-blocks: 500
 
 # Delay in seconds
 delay: 10
@@ -16,6 +16,10 @@ prices:
 
 # Message configuration
 message:
+
+  # When the help menu is opened
+  line
+
   # When a player is a given an edit wand.
   wand-received: '&aEdit wand received.'
 
